--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "prettier": "^3.3.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
+    "mongoose-aggregate-paginate-v2": "^1.0.7",
+    "npm": "^10.8.1"
   }
 }
